# awslib

./: LICENSE  README.md  pyproject.toml  requirements.txt  setup.cfg
src/awslib/: __init__.py  awsCache.py  awslib.py  s3cache.py
src/awslib.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
