[build-system]
requires = ["setuptools>=65.0"]
build-backend = "setuptools.build_meta"

[project]
name = "awslib"
version = "0.5.4"
authors = [ { name="Dennis Risen", email="dar5@case.edu" }, ]
description = "Library for processing CPI statistics files from AWS S3"
readme = "README.md"
requires-python = ">=3.6"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Licence :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent",
              ]
dependencies = [ "boto3>= 1.23", "botocore>=1.26",
    "cpiapi @ git+https://github.com/drisen/cpiapi",
]

[project.urls]
"Homepage" = "https://github.com/drisen/awslib"
"Bug Tracker" = "https://github.com/drisen/awslib/issues"
